add tests for auth-controller, return user by pointer instead of by value in user-service, use os.Getenv instead of godotenv, swaggo does not work with body params
